# westcambios

./: .bumpver.toml  .env.example  .gitignore  Dockerfile  docker-compose.development.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
app/: main.py
app/api/: __init__.py  app_factory.py  dependencies.py  include_routes.py
app/api/routes/: admin_routes.py  auth_routes.py  health_routes.py  rates_routes.py  ui_routes.py  user_routes.py
app/config/: __init__.py  app_config.py
app/controllers/: __init__.py  base_controller.py  rates_controller.py  user_controller.py
app/database/: __init__.py  db_base.py  db_config.py
app/database/models/: __init__.py  payments_model.py  rates_model.py  users_model.py
app/enums/: __init__.py  currencies_enum.py  payments_enum.py  user_roles_enum.py
app/schemas/: __init__.py  binance_request_schema.py  binance_response_schemas.py  payments_schemas.py  rates_schemas.py  tokens_schemas.py  users_schemas.py
app/seeds/: __init__.py  create_initial_admin.py  create_rates.py  create_users.py  rates_for_production.py
app/services/: __init__.py  binance_service.py  rates_service.py  scheduler_service.py  security_service.py  user_service.py
app/ui/: admin.html  index.html
app/ui/layouts/: base.html
app/ui/partials/: _edit_rate_modal.html  _edit_user_modal.html  _footer.html  _login_form.html  _messages.html  _navbar.html  _rate_modal.html
app/ui/static/js/: auth.js  (+2 more)
tests/: conftest.py
tests/test_services/: test_binance.py  test_rates.py  test_security.py  test_user.py
