[tool.poetry]
name = "westcambios"
version = "0.1.6"
description = "Consulta la tasa de cambio de Brasil a Venezuela para enviar tus remesas"
authors = ["Gabriel Baute <gabrielbaute@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# Core Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.31.0"}
jinja2 = "^3.1.0"
python-multipart = "^0.0.12"
requests = "^2.32.5"
pytz = "^2025.2"
APScheduler = "^3.11.2"

# Data & Config
pydantic = {extras = ["email"], version = "^2.10.0"}
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.0"

# Security (Auth)
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.4.0"
bumpver = "^2023.1129"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"